# CMake

./: CMakeLists.txt  LaboratoryWork№6.cpp  file.txt  func.cpp  func.hpp
